# get-workflow-version-action

./: README.md  action.yaml  pyproject.toml
get_workflow_version/: main.py
