[project]
name = "get-workflow-version"
version = "0.1.0"  # Not used
description = "Get commit SHA that GitHub Actions reusable workflow was called with"
authors = [
    {name = "Carl Csaposs", email = "carl.csaposs@canonical.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.3",
    "requests>=2.31.0",
]

[project.scripts]
get-workflow-version = "get_workflow_version.main:app"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP"]
